--- a/server/static/default/default.css
+++ b/server/static/default/default.css
@@ -43,7 +43,7 @@ header {
     color: var(--white);
     font-size: 1.5rem;
     font-family: 'Anton', sans-serif;
-
+    transition: all 0.25s;
 }
 
 .amphora-home {
@@ -53,6 +53,12 @@ header {
     color: var(--white);
     font-size: 1.5rem;
     font-family: 'Anton', sans-serif;
+    transition: all 0.25s;
+}
+
+.amphora-search:hover,
+.amphora-home:hover {
+    color: var(--ligh_grey);
 }
 
 .amphora-ingredients {
@@ -72,6 +78,12 @@ header {
     position: relative;
     grid-template-rows: min-content 150px min-content;
     grid-template-columns: 100%;
+    /* transform: translateY(0px); */
+    transition: all 0.25s
+}
+
+.amphora-ingredients--card:hover {
+    transform: translateY(-10px);
 }
 
 .amphora-ingredients--image {
