--- a/server/static/universal.css
+++ b/server/static/universal.css
@@ -27,11 +27,25 @@ body {
     background-color: var(--dark_grey);
     color: white;
     display: grid;
-    grid-template-rows: 20vh auto;
+    grid-template-rows: 20vh minmax(60vh, min-content) 20vh;
     grid-auto-columns: 100vw;
     box-sizing: border-box;
     position: relative;
     overflow-x: hidden;
+}
+
+*::-webkit-scrollbar {
+    width: 1em;
+}
+
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: rgb(202, 202, 202);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--red);
+    border-radius: 8px;
 }
 
 header {
@@ -43,4 +57,24 @@ header {
     font-size: 3rem;
     color: var(--light_blue);
     font-family: 'Anton', sans-serif;
+}
+
+footer {
+    font-family: 'Anton', sans-serif;
+    position: relative;
+    background-color: black;
+}
+
+.footer-message {
+    font-size: 3rem;
+    letter-spacing: 3px;
+    line-height: 3rem;
+    position: absolute;
+    bottom: 15%;
+    left: 5%;
+}
+
+.no-results {
+    padding: 20px;
+    font-size: 2rem;
 }
